--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nativescript/core": "^7.0.3",
     "@nativescript/theme": "^2.3.3",
     "axios": "^0.24.0",
+    "nativescript-barcodescanner": "^4.1.2",
     "nativescript-imagepicker": "^7.1.0",
     "nativescript-vue": "^2.8.1",
     "vuex": "^3.5.1"
