--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nativescript/theme": "^2.3.3",
     "axios": "^0.24.0",
     "nativescript-barcodescanner": "^4.1.2",
+    "nativescript-drop-down": "^6.0.0",
     "nativescript-filter-select": "^1.3.0",
     "nativescript-imagepicker": "^7.1.0",
     "nativescript-vue": "^2.8.1",
