--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nativescript-community/drawingpad": "^4.1.0",
     "@nativescript/camera": "^5.0.9",
     "@nativescript/core": "^7.0.3",
+    "@nativescript/geolocation": "^8.0.0",
     "@nativescript/theme": "^2.3.3",
     "axios": "^0.24.0",
     "nativescript-barcodescanner": "^4.1.2",
