--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nativescript-barcodescanner": "^4.1.2",
     "nativescript-drop-down": "^6.0.0",
     "nativescript-filter-select": "^1.3.0",
+    "nativescript-geolocation": "^5.1.0",
     "nativescript-imagepicker": "^7.1.0",
     "nativescript-vue": "^2.8.1",
     "vuex": "^3.5.1"
