--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nativescript-filter-select": "^1.3.0",
     "nativescript-geolocation": "^5.1.0",
     "nativescript-imagepicker": "^7.1.0",
+    "nativescript-laravel-echo": "^1.2.0",
     "nativescript-vue": "^2.8.1",
     "vuex": "^3.5.1"
   },
