--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nativescript-geolocation": "^5.1.0",
     "nativescript-imagepicker": "^7.1.0",
     "nativescript-laravel-echo": "^1.2.0",
+    "nativescript-pusher": "^1.0.1",
     "nativescript-vue": "^2.8.1",
     "vuex": "^3.5.1"
   },
